# ytdlp-gui

./: README.md  pyproject.toml
extras/: Info.plist  build_app.sh  launch.sh
ytdlpgui/: __init__.py  __main__.py  const.py  downloader.py  helpers.py  prefs.py  widgets.py
