[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdlpgui"
version = "1.0.0"
description = "A polished macOS GUI wrapper for yt-dlp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# tkinter ships with macOS Python — no extra UI dep needed
# yt-dlp is a runtime dep (or installed separately via brew)
dependencies = []

[project.scripts]
ytdlpgui = "ytdlpgui.__main__:main"

[project.optional-dependencies]
dev = ["pyinstaller"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ytdlpgui*"]
